z-index fixed

--- a/app/src/output.css
+++ b/app/src/output.css
@@ -613,6 +613,10 @@ video {
   z-index: 0;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
